--- a/RouletteGame/RouletteGame.Test.Unit/RouletteGame.Test.Unit.csproj
+++ b/RouletteGame/RouletteGame.Test.Unit/RouletteGame.Test.Unit.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{681A3CE2-B56B-4BD3-B865-1FA9E2786705}</ProjectGuid>
+    <ProjectGuid>{E2A86318-DB74-4240-92AD-F7E1ECA87505}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RouletteGame</RootNamespace>
-    <AssemblyName>RouletteGame</AssemblyName>
+    <RootNamespace>RouletteGame.Test.Unit</RootNamespace>
+    <AssemblyName>RouletteGame.Test.Unit</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -33,6 +33,14 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NSubstitute, Version=1.9.2.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
+      <HintPath>..\packages\NSubstitute.1.9.2.0\lib\net45\NSubstitute.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,17 +50,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bets\Bet.cs" />
-    <Compile Include="Bets\ColorBet.cs" />
-    <Compile Include="Bets\EvenOddBet.cs" />
-    <Compile Include="Roulette\Field.cs" />
-    <Compile Include="Bets\IBet.cs" />
-    <Compile Include="Roulette\IField.cs" />
-    <Compile Include="Roulette\IRoulette.cs" />
-    <Compile Include="Bets\FieldBet.cs" />
-    <Compile Include="Roulette\Roulette.cs" />
-    <Compile Include="RouletteGame.cs" />
+    <Compile Include="FieldUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RouletteUnitTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RouletteGame\RouletteGame.csproj">
+      <Project>{681a3ce2-b56b-4bd3-b865-1fa9e2786705}</Project>
+      <Name>RouletteGame</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
